<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mapuni.mobileenvironment.fragment.ExecuteFragment">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_65dp"
        android:background="@color/PagerBg">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/DIMEN_30dp"
                android:layout_height="@dimen/DIMEN_30dp"
                android:src="@mipmap/shouwen"/>
            <TextView
                android:layout_marginTop="@dimen/DIMEN_5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_receive"
                android:textColor="@color/white"
                android:textSize="@dimen/DIMEN_13SP"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/DIMEN_30dp"
                android:layout_height="@dimen/DIMEN_30dp"
                android:src="@mipmap/fawen"/>
            <TextView
                android:layout_marginTop="@dimen/DIMEN_5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_send_oa"
                android:textColor="@color/white"
                android:textSize="@dimen/DIMEN_13SP"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/DIMEN_30dp"
                android:layout_height="@dimen/DIMEN_30dp"
                android:src="@mipmap/tongxun"/>
            <TextView
                android:layout_marginTop="@dimen/DIMEN_5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_book"
                android:textColor="@color/white"
                android:textSize="@dimen/DIMEN_13SP"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/DIMEN_30dp"
                android:layout_height="@dimen/DIMEN_30dp"
                android:src="@mipmap/liucheng"/>
            <TextView
                android:layout_marginTop="@dimen/DIMEN_5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_process"
                android:textColor="@color/white"
                android:textSize="@dimen/DIMEN_13SP"/>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/DIMEN_65dp"
        android:id="@+id/scrollView" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/DIMEN_65dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="@dimen/DIMEN_30dp"
                        android:layout_height="@dimen/DIMEN_30dp"
                        android:src="@mipmap/richeng"/>
                    <TextView
                        android:layout_marginTop="@dimen/DIMEN_5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_plan"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/DIMEN_13SP"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="@dimen/DIMEN_30dp"
                        android:layout_height="@dimen/DIMEN_30dp"
                        android:src="@mipmap/qiandao"/>
                    <TextView
                        android:layout_marginTop="@dimen/DIMEN_5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_io"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/DIMEN_13SP"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="@dimen/DIMEN_30dp"
                        android:layout_height="@dimen/DIMEN_30dp"
                        android:src="@mipmap/rizhijilu"/>
                    <TextView
                        android:layout_marginTop="@dimen/DIMEN_5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_log"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/DIMEN_13SP"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="@dimen/DIMEN_30dp"
                        android:layout_height="@dimen/DIMEN_30dp"
                        android:src="@mipmap/xiaoxi"/>
                    <TextView
                        android:layout_marginTop="@dimen/DIMEN_5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_message"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/DIMEN_13SP"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/DIMEN_10dp"
                android:layout_marginRight="@dimen/DIMEN_10dp"
                android:layout_marginBottom="@dimen/DIMEN_10dp">

                <ImageView
                    android:layout_width="@dimen/DIMEN_30dp"
                    android:layout_height="@dimen/DIMEN_30dp"
                    android:id="@+id/imageView4"
                    android:src="@mipmap/check_list"
                    android:layout_marginLeft="@dimen/DIMEN_5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_check"
                    android:id="@+id/textView3"
                    android:textSize="@dimen/DIMEN_13SP"
                    android:paddingLeft="@dimen/DIMEN_2dp"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/checkList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            </android.support.v7.widget.RecyclerView>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/DIMEN_10dp"
                android:layout_marginRight="@dimen/DIMEN_10dp"
                android:layout_marginBottom="@dimen/DIMEN_10dp">
                <ImageView
                    android:layout_width="@dimen/DIMEN_30dp"
                    android:layout_height="@dimen/DIMEN_30dp"
                    android:src="@mipmap/execute_list"
                    android:layout_marginLeft="@dimen/DIMEN_5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_execute"
                    android:textSize="@dimen/DIMEN_13SP"
                    android:paddingLeft="@dimen/DIMEN_2dp"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/executeList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </ScrollView>
</FrameLayout>
