<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mapuni.mobileenvironment.fragment.ExecuteFragment">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_65dp"
        android:background="@color/PagerBg">

        <LinearLayout
            android:id="@+id/creatView"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/DIMEN_30dp"
                android:layout_height="@dimen/DIMEN_30dp"
                android:src="@mipmap/creat"/>
            <TextView
                android:layout_marginTop="@dimen/DIMEN_5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_creat"
                android:textColor="@color/white"
                android:textSize="@dimen/DIMEN_13SP"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/addCheck"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/DIMEN_30dp"
                android:layout_height="@dimen/DIMEN_30dp"
                android:src="@mipmap/check_icon"/>
            <TextView
                android:layout_marginTop="@dimen/DIMEN_5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_check"
                android:textColor="@color/white"
                android:textSize="@dimen/DIMEN_13SP"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/waitView"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/DIMEN_30dp"
                android:layout_height="@dimen/DIMEN_30dp"
                android:src="@mipmap/ready"/>
            <TextView
                android:layout_marginTop="@dimen/DIMEN_5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_ready"
                android:textColor="@color/white"
                android:textSize="@dimen/DIMEN_13SP"/>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/DIMEN_65dp"
        android:id="@+id/scrollView" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/DIMEN_65dp">
                <LinearLayout
                    android:id="@+id/executeList"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="@dimen/DIMEN_30dp"
                        android:layout_height="@dimen/DIMEN_30dp"
                        android:src="@mipmap/execute_list"/>
                    <TextView
                        android:layout_marginTop="@dimen/DIMEN_5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_execute"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/DIMEN_13SP"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/checkLayout"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="@dimen/DIMEN_30dp"
                        android:layout_height="@dimen/DIMEN_30dp"
                        android:src="@mipmap/report_list"/>
                    <TextView
                        android:layout_marginTop="@dimen/DIMEN_5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_check"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/DIMEN_13SP"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/send"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="@dimen/DIMEN_30dp"
                        android:layout_height="@dimen/DIMEN_30dp"
                        android:src="@mipmap/check_list"/>
                    <TextView
                        android:layout_marginTop="@dimen/DIMEN_5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_send"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/DIMEN_13SP"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/DIMEN_30dp"
                    android:layout_height="@dimen/DIMEN_30dp"
                    android:id="@+id/imageView4"
                    android:src="@mipmap/daiban"
                    android:layout_marginLeft="@dimen/DIMEN_5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_ready"
                    android:id="@+id/textView3"
                    android:textSize="@dimen/DIMEN_13SP"
                    android:paddingLeft="@dimen/DIMEN_2dp"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/messageList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>
            </RelativeLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="@dimen/DIMEN_30dp"
                    android:layout_height="@dimen/DIMEN_30dp"
                    android:src="@mipmap/report_list"
                    android:layout_marginLeft="@dimen/DIMEN_5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_check"
                    android:textSize="@dimen/DIMEN_13SP"
                    android:paddingLeft="@dimen/DIMEN_2dp"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/planList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</FrameLayout>

